read experts login info from a file